[gd_scene load_steps=8 format=2]

[ext_resource path="res://Seller_House.gd" type="Script" id=1]
[ext_resource path="res://Sprites PI/Seller/__PNG/3/Seller_Background.png" type="Texture" id=2]
[ext_resource path="res://Animations/Animation_Container.tscn" type="PackedScene" id=3]
[ext_resource path="res://Buttons/MenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Montserrat_48.tres" type="DynamicFont" id=5]
[ext_resource path="res://RichTextLabel2.gd" type="Script" id=6]
[ext_resource path="res://Sprites PI/Accessories/coin.png" type="Texture" id=7]

[node name="Seller" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="CenterContainer" type="CenterContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 8
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Size Flags" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Animation_Container" parent="." index="1" instance=ExtResource( 3 )]

anchor_right = 0.0
margin_left = 21.0
margin_top = -3.0
margin_right = 1015.0
margin_bottom = -3.0

[node name="BackButton" parent="." index="2" instance=ExtResource( 4 )]

anchor_left = 1.0
anchor_bottom = 0.0
margin_left = -141.0
margin_bottom = 66.0
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
text = "Back"
_sections_unfolded = [ "Focus", "Rect", "Size Flags", "custom_fonts" ]

[node name="AttackBuy" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1100.0
margin_top = 150.0
margin_right = 1200.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Buy!"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="DefenceBuy" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1100.0
margin_top = 430.0
margin_right = 1200.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Buy!"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="AgilityBuy" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1100.0
margin_top = 220.0
margin_right = 1200.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Buy!"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="HealthBuy" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1100.0
margin_top = 360.0
margin_right = 1200.0
margin_bottom = 410.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Buy!"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="StaminaBuy" type="Button" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1100.0
margin_top = 290.0
margin_right = 1200.0
margin_bottom = 340.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Buy!"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Polygon2D" type="Polygon2D" parent="." index="8"]

visible = false
position = Vector2( 55.5186, 0 )
polygon = PoolVector2Array( 91.9521, 560.247, 91.9521, 668.809, 1144.7, 668.945, 1143.59, 560.357 )
uv = PoolVector2Array(  )
color = Color( 0.410156, 0.408554, 0.408554, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="RichTextLabel" type="RichTextLabel" parent="Polygon2D" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 113.0
margin_top = 577.0
margin_right = 1125.0
margin_bottom = 652.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="Polygon2D" index="1"]

process_mode = 1
wait_time = 0.03
one_shot = false
autostart = false

[node name="Yes" type="Button" parent="." index="9"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1000.0
margin_top = 600.0
margin_right = 1060.0
margin_bottom = 645.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Yes"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="No" type="Button" parent="." index="10"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1100.0
margin_top = 600.0
margin_right = 1160.0
margin_bottom = 645.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "No"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Gold" type="Label" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 940.0
margin_top = 71.0
margin_right = 1075.0
margin_bottom = 121.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Size Flags", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Gold" index="0"]

position = Vector2( 154.644, 24.9595 )
texture = ExtResource( 7 )
offset = Vector2( 1, 0 )
_sections_unfolded = [ "Offset" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Attack" type="Label" parent="." index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 950.0
margin_top = 150.0
margin_right = 1055.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Attack      Level:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="LevelATT" type="Label" parent="Attack" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_right = 150.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="Defence" type="Label" parent="." index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 950.0
margin_top = 430.0
margin_right = 1055.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Defence   Level:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="LevelDEF" type="Label" parent="Defence" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_right = 150.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="Agility" type="Label" parent="." index="14"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 950.0
margin_top = 220.0
margin_right = 1055.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Agility     Level:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="LevelAGI" type="Label" parent="Agility" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_right = 150.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="Health" type="Label" parent="." index="15"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 950.0
margin_top = 360.0
margin_right = 1055.0
margin_bottom = 410.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Health     Level:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="LevelHLT" type="Label" parent="Health" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_right = 150.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="Stamina" type="Label" parent="." index="16"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 950.0
margin_top = 290.0
margin_right = 1055.0
margin_bottom = 340.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Stamina   Level:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="LevelSTA" type="Label" parent="Stamina" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_right = 150.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]

[connection signal="pressed" from="AttackBuy" to="." method="_on_AttackBuy_pressed"]

[connection signal="pressed" from="DefenceBuy" to="." method="_on_DefenceBuy_pressed"]

[connection signal="pressed" from="AgilityBuy" to="." method="_on_AgilityBuy_pressed"]

[connection signal="pressed" from="HealthBuy" to="." method="_on_HealthBuy_pressed"]

[connection signal="pressed" from="StaminaBuy" to="." method="_on_StaminaBuy_pressed"]

[connection signal="timeout" from="Polygon2D/Timer" to="Polygon2D/RichTextLabel" method="_on_Timer_timeout"]

[connection signal="pressed" from="Yes" to="." method="_on_Yes_pressed"]

[connection signal="pressed" from="No" to="." method="_on_No_pressed"]


